--- a/pizza/intex.html
+++ b/pizza/intex.html
@@ -2,8 +2,11 @@
 <html lang="eng">
   <head>
     <meta charset="utf-8"></meta>
-    <title></title>
+    <title>Pizza 3001</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body></body>
+  <body>
+    <script src="js/app.js"></script>
+    <script src="js/compute.js"></script>
+  </body>
 </html>
