added random function randoInRange() and a generateTable() function to compute.js in addition to removing the premade table

--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -6,143 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <table id="table">
-      <tr class="tableRow">
-        <th colspan="4" class="tableHead">Beverton</th>
-      </tr>
-      <tr class="tableHead">
-        <th>Time</th>
-        <th>Pizzas Expected</th>
-        <th># of Deliveries</th>
-        <th># of Drivers</th>
-      </tr>
-      <!-- 8a-9a column-->
-      <tr class="tableRow">
-        <td>8a-9a</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 9a-10a column-->
-      <tr class="tableRow">
-        <td>9a-10a</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 10a-11a column-->
-      <tr class="tableRow">
-        <td>10a-11a</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 11a-12p column-->
-      <tr class="tableRow">
-        <td>11a-12p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 12p-1p column-->
-      <tr class="tableRow">
-        <td>12a-1p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 1p-2p column-->
-      <tr class="tableRow">
-        <td>1p-2p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 2p-3p column-->
-      <tr class="tableRow">
-        <td>2p-3p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 3p-4p column-->
-      <tr class="tableRow">
-        <td>3p-4p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 4p-5p column-->
-      <tr class="tableRow">
-        <td>4p-5p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 5p-6p column-->
-      <tr class="tableRow">
-        <td>5p-6p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 6p-7p column-->
-      <tr class="tableRow">
-        <td>6p-7p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 7p-8p column-->
-      <tr class="tableRow">
-        <td>7p-8p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 8p-9p column-->
-      <tr class="tableRow">
-        <td>8p-9p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 9p-10p column-->
-      <tr class="tableRow">
-        <td>9p-10p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 10p-11p column-->
-      <tr class="tableRow">
-        <td>10p-11p</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 11p-12a column-->
-      <tr class="tableRow">
-        <td>11p-12a</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 12a-1a column-->
-      <tr class="tableRow">
-        <td>12a-1a</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-      <!-- 1a-2a column-->
-      <tr class="tableRow">
-        <td>1a-2a</td>
-        <td>#P</td>
-        <td>#Del</td>
-        <td>#Dri</td>
-      </tr>
-    </table>
+    <h1>Sales-Data</h1>
+    <p id="test">test input</p>
     <script src="js/app.js"></script>
     <script src="js/compute.js"></script>
   </body>
