adding style changes to css file

--- a/pizza/intex.html
+++ b/pizza/intex.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
-    <meta charset="utf-8"></meta>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>    <meta charset="utf-8"></meta>
     <title>Pizza 3001</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <nav>
+    </nav>
+    <h1>Pizza 3001</h1>
+    <h2 id="happyPizzaNumber">Happy Pizza Odysseys</h2>
+    <!-- linking scripts to page -->
     <script src="js/app.js"></script>
-    <script src="js/compute.js"></script>
+    <!-- <script src="js/compute.js"></script> -->
   </body>
 </html>
