--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
-    <meta charset="utf-8"></meta>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>    <meta charset="utf-8"></meta>
     <title>Sales-Data</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <nav>
+      <a href="intex.html">home</a>
+    </nav>
     <h1>Sales-Data</h1>
     <p id="test">test input</p>
+    <p id="testTwo">test two input</p>
     <script src="js/app.js"></script>
     <script src="js/compute.js"></script>
   </body>
