renamed intex to index.html and added in deliveries logic function

--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav>
-      <a href="intex.html">home</a>
+      <a href="index.html">home</a>
     </nav>
     <h1>Sales-Data</h1>
     <p id="test">test input</p>
