--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -10,8 +10,10 @@
       <a href="index.html">home</a>
     </nav>
     <h1>Sales-Data</h1>
-    <p id="test">test input</p>
-    <p id="testTwo">test two input</p>
+    <!-- testing for functions -->
+    <!-- <p id="test">test input</p>
+    <p id="testTwo">test two input</p> -->
+    <div id="diva"></div>
     <script src="js/app.js"></script>
     <script src="js/compute.js"></script>
   </body>
