added in pizza counter number to add that text.Content to index and sales-data page

--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -10,6 +10,7 @@
       <a href="index.html">home</a>
     </nav>
     <h1>Sales-Data</h1>
+    <h2 id="totesPizzaBra">Total Pizzas = </h2>
     <!-- testing for functions -->
     <!-- <p id="test">test input</p>
     <p id="testTwo">test two input</p> -->
