--- a/pizza/index.html
+++ b/pizza/index.html
@@ -9,9 +9,24 @@
     <nav>
     </nav>
     <h1>Pizza 3001</h1>
-    <h2 id="happyPizzaNumber">Happy Pizza Odysseys</h2>
+    <h2 id="totesPizzaBra"></h2>
+    <img src="https://media.giphy.com/media/l2QZTYbxa2XixKcUw/giphy.gif" alt="gif" style="width:300px; height:300px;"/>
+    <div class="zaShopLocations">
+      <h3>Beverton</h3>
+      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+      <h3>Hillsboro</h3>
+      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+      <h3>Downtown</h3>
+      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+      <h3>NorthEast</h3>
+      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+      <h3>Clackamas</h3>
+      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+      <h3>PDX Airport</h3>
+      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+    </div>
     <!-- linking scripts to page -->
     <script src="js/app.js"></script>
-    <!-- <script src="js/compute.js"></script> -->
+    <script src="js/compute.js"></script>
   </body>
 </html>
