--- a/pizza/index.html
+++ b/pizza/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>    <meta charset="utf-8"></meta>
     <title>Pizza 3001</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/indexStyle.css">
   </head>
   <body>
     <nav>
