adding a new dayNine branch in addition to styles additions to indexpage

--- a/pizza/index.html
+++ b/pizza/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/indexStyle.css">
   </head>
   <body>
+    <div id="banner"></div>
     <nav>
     </nav>
     <h1>Pizza 3001</h1>
