new branch dayTen

--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -11,10 +11,12 @@
     </nav>
     <h1>Sales-Data</h1>
     <h2 id="totesPizzaBra">Total Pizzas = </h2>
+    <h3 id="beverton"></h3>
     <!-- testing for functions -->
     <!-- <p id="test">test input</p>
     <p id="testTwo">test two input</p> -->
-    <div id="diva"></div>
+    <!-- <div id="diva"></div> -->
+    
     <script src="js/app.js"></script>
     <script src="js/compute.js"></script>
   </body>
