--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -18,7 +18,7 @@
     <!-- <div id="diva"></div> -->
     <div id="formCol1">
         <label for="storeName">Store Name:</label>
-        <input id="storeName" class="input">
+        <input id="storeName" class="input" value="St. Johns">
         <input id="submitButton" type="button" class="button" value="submit">
     </div>
     <script src="js/app.js"></script>
