added form, and newStoreArray

--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -11,6 +11,7 @@
     </nav>
     <h1>Sales-Data</h1>
     <h2 id="totesPizzaBra">Total Pizzas = </h2>
+    <h4 id="beverton">input</h4>
     <h3 id="beverton"></h3>
     <!-- testing for functions -->
     <!-- <p id="test">test input</p>
