starting over with css. added normalize css sheet in addition to creating header content and footer sections

--- a/pizza/index.html
+++ b/pizza/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza 3001</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/indexStyle.css">
   </head>
   <body>
-    <div id="banner"></div>
-    <nav>
-    </nav>
-    <h1>Pizza 3001</h1>
-    <h2 id="totesPizzaBra"></h2>
-    <img src="https://media.giphy.com/media/l2QZTYbxa2XixKcUw/giphy.gif" alt="gif" style="width:300px; height:300px;"/>
-    <div class="zaShopLocations">
-      <h3>Beverton</h3>
-      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-      <h3>Hillsboro</h3>
-      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-      <h3>Downtown</h3>
-      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-      <h3>NorthEast</h3>
-      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-      <h3>Clackamas</h3>
-      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-      <h3>PDX Airport</h3>
-      <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-    </div>
+      <header class="main-header">
+        <div class="container">
+          <h1 class="name">Pizza 3001</h1>
+          <nav>
+          </nav>
+          <h2 id="totesPizzaBra"></h2>
+        </div>
+      </header>
+      <div class="container">
+        <img src="https://media.giphy.com/media/l2QZTYbxa2XixKcUw/giphy.gif" alt="gif" style="width:300px; height:300px;"/>
+        
+        <h3>Beverton</h3>
+        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+        <h3>Hillsboro</h3>
+        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+        <h3>Downtown</h3>
+        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+        <h3>NorthEast</h3>
+        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+        <h3>Clackamas</h3>
+        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+        <h3>PDX Airport</h3>
+        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+
+      </div>
+      <footer class="main-footer">
+        <span>&copy;2016 Pizza 3001</span>
+      </footer>
     <!-- linking scripts to page -->
     <script src="js/app.js"></script>
     <script src="js/compute.js"></script>
