--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sales-Data</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <nav>
-      <a href="index.html">home</a>
-    </nav>
-    <h1>Sales-Data</h1>
-    <h2 id="totesPizzaBra">Total Pizzas = </h2>
-    <h4 id="beverton">input</h4>
-    <h3 id="beverton"></h3>
-    <!-- testing for functions -->
-    <!-- <p id="test">test input</p>
-    <p id="testTwo">test two input</p> -->
-    <!-- <div id="diva"></div> -->
-    <div id="formCol1">
-        <label for="storeName">Store Name:</label>
-        <input id="storeName" class="input" value="St. Johns">
-        <input id="submitButton" type="button" class="button" value="submit">
-    </div>
+      <header class="main-header">
+        <div class="container">
+          <nav>
+            <a href="index.html">home</a>
+          </nav>
+          <h1 class="name">Sales-Data</h1>
+          <h2 id="totesPizzaBra">Total Pizzas = </h2>
+        </div>
+      </header>
+      <div class="container">
+        <h4 id="beverton">input</h4>
+        <h3 id="beverton"></h3>
+
+        <div id="storeTables">
+        </div>
+        <div id="formCol1">
+            <label for="storeName">Store Name:</label>
+            <input id="storeName" class="input" value="St. Johns">
+            <input id="submitButton" type="button" class="button" value="submit">
+        </div>
+      </div>
+      <footer class="main-footer">
+        <span>&copy;2016 Pizza 3001</span>
+      </footer>
+    <!-- linking scripts to page -->
     <script src="js/app.js"></script>
     <script src="js/compute.js"></script>
   </body>
