--- a/pizza/index.html
+++ b/pizza/index.html
@@ -1,36 +1,63 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
+    <title>Pizza3001</title>
+    <link href='https://fonts.googleapis.com/css?family=Nunito:400,700,300' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza 3001</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/indexStyle.css">
   </head>
   <body>
-      <header class="main-header">
+      <div class="wrap">
+        <header class="main-header">
+          <div class="container">
+            <h1 class="name">Pizza 3001</h1>
+            <!-- <nav class="main-nav">
+              <a href="sales-data.html">salesData</a>
+            </nav> -->
+            <h2 id="totesPizzaBra"></h2>
+          </div>
+        </header>
         <div class="container">
-          <h1 class="name">Pizza 3001</h1>
-          <nav>
-          </nav>
-          <h2 id="totesPizzaBra"></h2>
+          <div class="image-container">
+            <img src="https://media.giphy.com/media/l2QZTYbxa2XixKcUw/giphy.gif" alt="gif" style="width:350px; height:350px;"/>
+          </div>
+          <h3>Come in and eat our awarding winning pizza at any one of our locations near you! We specialize in ground breaking, innovative, artisenal pizza creations. <br>Come feast at pizza 3001</h3>
+          <h5>locations</h5>
+          <div class="locations-container">
+            <div class="item-1">
+              <h3>Beverton</h3>
+              <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d89512.46293843389!2d-122.87568495845832!3d45.48461884378885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5495082476f88863%3A0x10e0cf158aacbd08!2sBeaverton%2C+OR!5e0!3m2!1sen!2sus!4v1459094675267" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="item-2">
+              <h3>Hillsboro</h3>
+              <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45039.01842339699!2d-122.96505250326297!3d45.5202635886626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5495055f56bce579%3A0x7d29ff866a33ed86!2sHillsboro%2C+OR!5e0!3m2!1sen!2sus!4v1459094325671" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="item-3">
+              <h3>Downtown</h3>
+              <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22364.613038552878!2d-122.69605149491024!3d45.518600612493394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950a1036189519%3A0xf54b75d54eea9242!2sDowntown%2C+Portland%2C+OR!5e0!3m2!1sen!2sus!4v1459094716922" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="item-4">
+              <h3>NorthEast</h3>
+              <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d178766.46546004136!2d-122.71064497019194!3d45.56589319647422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5495a42a69a02733%3A0xd933c07c8c6dfdcd!2sNortheast+Portland%2C+Portland%2C+OR!5e0!3m2!1sen!2sus!4v1459094740574" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="item-5">
+              <h3>Clackamas</h3>
+              <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44815.672287352754!2d-122.58602270883763!3d45.409752599592274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54957b0e72805af3%3A0x58082afe6f323f2f!2sClackamas%2C+OR!5e0!3m2!1sen!2sus!4v1459094756320" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="item-6">
+              <h3>PDXAirport</h3>
+              <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2792.0385699286107!2d-122.59728288387609!3d45.58976937910264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5495a0aa74dc20d1%3A0x5bda7693380e5c3d!2sPortland+International+Airport!5e0!3m2!1sen!2sus!4v1459094769428" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
-      </header>
-      <div class="container">
-        <img src="https://media.giphy.com/media/l2QZTYbxa2XixKcUw/giphy.gif" alt="gif" style="width:300px; height:300px;"/>
-        
-        <h3>Beverton</h3>
-        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-        <h3>Hillsboro</h3>
-        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-        <h3>Downtown</h3>
-        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-        <h3>NorthEast</h3>
-        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-        <h3>Clackamas</h3>
-        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-        <h3>PDX Airport</h3>
-        <h4>Hours: 8a-2a Tues-Sun, closed on Mon</h4>
-
       </div>
       <footer class="main-footer">
         <span>&copy;2016 Pizza 3001</span>
