additional styling to fit in with css assignment requirements, in addition to creating footer to sum tables with total pizzas by store

--- a/pizza/sales-data.html
+++ b/pizza/sales-data.html
@@ -20,17 +20,12 @@
           </div>
         </header>
         <div class="container">
-          <h4 id="beverton">input</h4>
-          <h3 id="beverton"></h3>
-
-          <div id="storeTables">
-          </div>
           <div id="formCol1">
-              <label for="storeName">Store Name:</label>
+              <label for="storeName" class="storeNameLabel">Store Name:</label>
               <input id="storeName" class="input" value="St. Johns">
               <input id="submitButton" type="button" class="button" value="submit">
           </div>
-
+          <div id="weeklies">weeklies</div>
         </div>
       </div>
       <footer class="main-footer">
