added in inline element to replace default block element for my h6 element on the index.html and indexStyles.css files

--- a/pizza/index.html
+++ b/pizza/index.html
@@ -23,7 +23,10 @@
           <div class="image-container">
             <img src="https://media.giphy.com/media/l2QZTYbxa2XixKcUw/giphy.gif" alt="gif" style="width:350px; height:350px;"/>
           </div>
-          <h3>Come in and eat our awarding winning pizza at any one of our locations near you! We specialize in ground breaking, innovative, artisenal pizza creations. <br>Come feast at pizza 3001</h3>
+          <div class="blockDisplays">
+            <h6>Come in and eat our awarding winning pizza at any one of our locations near you! We specialize in ground breaking, innovative, artisenal pizza creations. </h6>
+            <h6>Come feast at pizza 3001</h6>
+          </div>
           <h5>locations</h5>
           <div class="locations-container">
             <div class="item-1">
