adding sales-data link to footer of index.html page for ease of click through

--- a/pizza/index.html
+++ b/pizza/index.html
@@ -64,6 +64,7 @@
       </div>
       <footer class="main-footer">
         <span>&copy;2016 Pizza 3001</span>
+        <a href="sales-data.html">sales-data</a>
       </footer>
     <!-- linking scripts to page -->
     <script src="js/app.js"></script>
